<resources>
    <string name="app_name">Millennio</string>
    <string name="choose">Choose a language</string>
    <string name="next">next</string>
    <string name="welcome">Welcome to Millennio!</string>
    <string name="nineth">Guess the year in which a historic event happened, something was invented, a movie, videogame or book was released</string>
    <string name="tenth">The game</string>
    <string name="eleventh">You start every game with a set number of points depending on the category, you find them at the top of the screen</string>
    <string name="twelth">For every correct answer you will gain points, but if you are wrong you will lose the difference between the correct answer and yours</string>
    <string name="thirteenth">Answer as many questions as you can, the game ends if you run out of points</string>
    <string name="goodluck">Good luck!</string>
    <string name="newGame">New Game</string>
    <string name="singlePlayer">SinglePlayer</string>
    <string name="oneVone">One vs One</string>
    <string name="statistics">statistics</string>
    <string name="share">share</string>
    <string name="language">English</string>
    <string name="shareTitle">Share with a friend</string>
    <string name="draw">DRAW</string>
    <string name="easy">Easy: </string>
    <string name="hard">Hard: </string>
    <string name="gamesPlayed">Games</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="post2010">last 10 years</string>
    <string name="influencial">most influential</string>
    <string name="START">play</string>
    <string name="initialPoints">Initial Points: </string>
    <string name="pointsCorrect">Points on correct answer:</string>
    <string name="minimumYear">minimum year:</string>
    <string name="score">score : 0</string>
    <string name="close">close</string>
    <string name="result">Result :</string>
    <string name="newHighScore">NEW High Score</string>
    <string name="highScore">High Score</string>
    <string name="gameOver">GAME OVER</string>
    <string name="tryAgain">Try Again</string>
    <string name="quit">Exit</string>
    <string name="player">PLAYER</string>
    <string name="winner">winner</string>
    <string name="categories">CATEGORIES</string>
    <string name="historyCategory">HISTORY</string>
    <string name="inventionsCategory">INVENTIONS</string>
    <string name="moviesCategory">MOVIES</string>
    <string name="gamesCategory">VIDEOGAMES</string>
    <string name="booksCategory">LITERATURE</string>
    <string name="singlesCategory">SINGLES</string>
    <string name="albumsCategory">ALBUMS</string>
    <string name="normalDifficulty">easy</string>
    <string name="hardDifficulty">hard</string>
    <string name="averageScore">average score</string>
</resources>