<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context="wunderlabs.com.Millennio.singleplayerResultActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/gameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameOver"
        android:textSize="32sp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:textColor="@color/white"
        android:text="42"
        android:layout_marginTop="50dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <TextView
            android:id="@+id/highScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highScore"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/highScoreInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginStart="4dp"
            android:textColor="@color/white"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:weightSum="20"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <Button
                android:id="@+id/tryAgainButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/tryAgain"
                android:background="@null"
                android:textColor="@color/white"
                android:paddingBottom="4dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_173216"
                android:alpha="0.43"/>

        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <Button
                android:id="@+id/quitButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/close"
                android:background="@null"
                android:textColor="@color/white"
                android:paddingBottom="4dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_173216"
                android:alpha="0.43"/>

        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>



</LinearLayout>
