<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/sfondo"
    tools:context="wunderlabs.com.Millennio.multiplayerResultActivity">


    <TextView
        android:id="@+id/gameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="GAME OVER"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="90dp"
        />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/crown"/>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player"
            android:textColor="@color/blue_light"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/winnerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/blue_light"
            android:layout_marginBottom="2dp"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:weightSum="20"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <Button
                android:id="@+id/tryAgainButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/tryAgain"
                android:background="@null"
                android:textColor="@color/white"
                android:paddingBottom="4dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_173216"
                android:alpha="0.43"/>

        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <Button
                android:id="@+id/quitButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/close"
                android:background="@null"
                android:textColor="@color/white"
                android:paddingBottom="4dp"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_173216"
                android:alpha="0.43"/>

        </RelativeLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

</LinearLayout>
